--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,17 @@ frontend/build
 frontend/*.tsbuildinfo
 frontend/next-env.d.ts
 
-# Backend (Reserved for future)
-# backend/node_modules
-# backend/dist
+# Backend (Django)
+backend/__pycache__/
+backend/*.py[cod]
+backend/*$py.class
+backend/.env
+backend/.venv
+backend/env/
+backend/venv/
+backend/ENV/
+backend/db.sqlite3
+backend/db.sqlite3-journal
+backend/static/
+backend/media/
+backend/*.log
